# beejs

./: .dockerignore  .gitignore  ACCURATE_CURRENT_STATUS_REPORT.md  AGENTS.md  BEEJS_CURRENT_STATUS_ANALYSIS.md  BEEJS_PERFORMANCE_FINAL_REPORT.md  BENCHMARK_RESULTS_STAGE61.md  COMPILATION_FIX_SUMMARY_v012.md  COMPREHENSIVE_PERFORMANCE_REPORT.md  CONCURRENT_EXECUTION_DESIGN.md  CONTRIBUTING.md  Cargo.toml  Cargo_doc_test.toml  Cargo_test.toml  DEBUGGER_USAGE.md  DEPLOYMENT.md  DEVELOPMENT_SUMMARY.md  Dockerfile  FAST_PATH_OPTIMIZATION_REPORT.md  FAST_PATH_TEST_IMPLEMENTATION_REPORT.md  FINAL_OPTIMIZATION_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_STAGE_27_2.md  IMPLEMENTATION_PLAN_STAGE_27_4.md  IMPLEMENTATION_PLAN_STAGE_28.md  IMPLEMENTATION_PLAN_STAGE_29.md  IMPLEMENTATION_PLAN_STAGE_30.md  IMPLEMENTATION_PLAN_STAGE_31.md  IMPLEMENTATION_PLAN_STAGE_31_3_4.md  IMPLEMENTATION_PLAN_STAGE_40.md  IMPLEMENTATION_PLAN_STAGE_41.md  IMPLEMENTATION_PLAN_STAGE_42.md  IMPLEMENTATION_PLAN_STAGE_53.md  IMPLEMENTATION_PLAN_STAGE_54.md  IMPLEMENTATION_PLAN_STAGE_54_3.md  IMPLEMENTATION_PLAN_STAGE_55.md  IMPLEMENTATION_PLAN_STAGE_55_2.md  IMPLEMENTATION_PLAN_STAGE_58.md  IMPLEMENTATION_PLAN_STAGE_59.md  IMPLEMENTATION_PLAN_STAGE_61.md  (+354 more)
beejs-release/: PERFORMANCE_COMPARISON_FINAL_REPORT.md  PROGRESS.md
benchmark_reports/: performance_report_20251218_234636.html
benchmarks/: ACCURATE_PERFORMANCE_COMPARISON.md  beejs_benchmark.js  beejs_results.json  bun_benchmarks.js  bun_results.json  real_performance_comparison.md  real_performance_report.md  run_benchmarks.sh  run_real_comparison.sh  run_real_comparison.sh.backup  run_real_comparison_fixed.sh  runtime_reuse_benchmark.rs
config/: perf_thresholds.json  platform_test_config.json
configs/: production.toml
dashboards/: beejs_overview.json  enterprise_metrics.json  performance_detailed.json
docs/: AUTO_SCALING_BREAKTHROUGH.md  BEEJS_LANGUAGE_DESIGN_REVIEW_2026-06-12.md  BEEJS_MAJOR_ACHIEVEMENT_SUMMARY.md  BEEJS_PERFORMANCE_FINAL_REPORT.md  BEEJS_REPAIR_SPRINT_TASKS_2026-06-12.md  BEEJS_STAGE_61_WORK_SUMMARY_2025_12_20.md  BEEJS_USER_GUIDE.md  BEEJS_V020_COMPLETION_REPORT.md  CLI_USAGE_GUIDE.md  COMPILATION_FIX_STAGE_59.md  COMPILATION_FIX_SUMMARY.md  COMPREHENSIVE_PERFORMANCE_REPORT.md  CONTRIBUTING.md  CURRENT_SCOPE.md  CURRENT_STATUS_SUMMARY.md  DEBUGGER_COMPILATION_FIX_STAGE_59.md  DEBUGGER_FIX_STAGE_59_1_COMPLETION_REPORT.md  DEBUGGER_USAGE.md  DEPLOYMENT.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_STAGE_31_3.md  IMPLEMENTATION_PLAN_STAGE_34_0.md  IMPLEMENTATION_PLAN_STAGE_36_0.md  IMPLEMENTATION_PLAN_STAGE_37_0.md  IMPLEMENTATION_PLAN_STAGE_39.md  IMPLEMENTATION_PLAN_STAGE_40_1.md  IMPLEMENTATION_PLAN_STAGE_43.md  IMPLEMENTATION_PLAN_STAGE_51.md  IMPLEMENTATION_PLAN_STAGE_54_2.md  IMPLEMENTATION_PLAN_STAGE_54_4.md  IMPLEMENTATION_PLAN_STAGE_56.md  IMPLEMENTATION_PLAN_STAGE_56_4.md  IMPLEMENTATION_PLAN_STAGE_57.md  IMPLEMENTATION_PLAN_STAGE_60.md  IMPLEMENTATION_PLAN_STAGE_65.md  IMPLEMENTATION_PLAN_STAGE_69.md  IMPLEMENTATION_PLAN_STAGE_72.md  IMPLEMENTATION_PLAN_STAGE_77.md  IMPLEMENTATION_PLAN_STAGE_82.md  (+90 more)
examples/: ai_performance_demo.rs  ai_workload_demo.js  async_fn_test.ts  async_test.ts  demo-hot-reload.html  demo-hot-reload.js  generic_test.ts  hello.js  hello.ts  hello_basic.ts  hello_simple.ts  hello_world.js  hot-reload-client.js  inline_cache_example.js  interface_test.ts  jit_optimizer_demo.js  minimal_runtime.rs  no_interface.ts  no_semi.ts  no_types.ts  normal_fn.ts  perf_analysis_demo.rs.disabled  performance_monitor_demo.rs.disabled  simple_async.ts  simple_test.ts  simplest_async.ts  test_arrow_block_body.ts  test_arrow_fn.ts  test_arrow_simple.ts  test_async_iife.ts  test_bin2.ts  test_bin3.ts  test_bin4.ts  test_binary.ts  test_call_obj.ts  test_concat.ts  test_concat2.ts  test_concat3.ts  test_concat4.ts  test_concat5.ts  (+34 more)
monitoring/: beejs_alerts.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml  setup.sh
scripts/: fix_remaining_errors_stage46.py  fix_scope_borrow_stage46.py  fix_v8_option_stage46.py  fix_v8_string_new_stage46.py  perf_baseline_update.sh
src/: ai_async_queue.rs  ai_batch_processor.rs  ai_memory_pool.rs  ai_model_interface.rs  ai_model_interface.rs.bak  async_io.rs  async_io.rs.bak  code_analyzer.rs  code_cache.rs  code_cache.rs.bak  concurrent_execution.rs  concurrent_execution.rs.bak  deep_optimization.rs  ecosystem_lite.rs  ecosystem_lite.rs.bak  error_handler.rs  error_handler.rs.bak  event_loop.rs  event_loop.rs.bak  fast_path_tests.rs  flame_graph.rs  flame_graph.rs.bak  hot_path_tracker.rs  hot_path_tracker.rs.bak  inline_cache.rs  inline_cache.rs.bak  isolate_guard.rs  isolate_pool.rs  isolate_pool.rs.bak  isolate_prewarmer.rs  isolate_prewarmer.rs.bak  jit_optimizer.rs  jit_optimizer.rs.bak  lazy_loader.rs  lazy_loader.rs.bak  lib.rs  lib_minimal.rs  lib_minimal.rs.bak  lib_quickjs_current.rs.backup  lib_v8_partial.rs  (+80 more)
test_modules/: math.js
tests/: QUARANTINE.md  abort_api_tests.rs  advanced_jit_optimization_tests.rs  ai_workload_tests.rs  ai_workload_tests.rs.disabled  array_buffer_transfer_tests.rs  assertions_enhanced_matchers_tests.rs  async_await_tests.rs  async_await_tests.rs.disabled  async_timer_tests.rs  auto_scaling_tests.rs  background_sync_tests.rs  beejs_core_functionality_tests.rs  beejs_core_tests.rs  blob_api_tests.rs  broadcast_channel_tests.rs  buffer_api_tests.rs  buffer_process_enhanced_tests.rs  bundler_integration_tests.rs  byob_tests.rs  cicd_unit_tests.rs  cli_enhancement_tests.rs.disabled  cli_regression_tests.rs  cli_release_tests.rs  cli_runtime_name_tests.rs  clipboard_api_tests.rs  code_quality_tests.rs  commonjs_resolver_tests.rs  compilation_errors_test.rs  compilation_status_test.rs  compile_warnings_fix_tests.rs  compression_stream_tests.rs  concurrent_execution_tests.rs  concurrent_runtime_fix_tests.rs  console_enhanced_tests.rs  crypto_aes_gcm_tests.rs  crypto_cipher_tests.rs  crypto_cipheriv_tests.rs  crypto_createecdh_tests.rs  crypto_createhash_tests.rs  (+347 more)
tools/: advanced_devtools.rs  (+6 more)
(+1258 files in other folders)
