[package]
name = "beejs"
version = "0.1.0"
edition = "2021"
authors = ["Henry Zhang"]
description = "High-performance JavaScript/TypeScript runtime built with Rust and V8"
license = "MIT"

[dependencies]
# V8 - Google's high-performance JavaScript engine with Rust bindings
rusty_v8 = "0.22"

# WebAssembly runtime
wasmtime = "38.0"
wasmtime-wasi = "38.0"

# JavaScript to WebAssembly compiler
javy-codegen = "1.0"

# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# WebAssembly binary format
wasm-encoder = "0.243"
wasmparser = "0.217"

# Cryptography for module hashing
blake3 = "1.5"

# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
memmap2 = "0.9"

# HTTP Server for Server mode
tiny_http = "0.12"

# System calls for zero-copy network I/O
libc = "0.2"

# Temporary file support
tempfile = "3.0"

# WebSocket support (with TLS)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"

# File watching for hot reload
notify = "6.1"
notify-debouncer-mini = "0.4"
walkdir = "2.4"

# Utilities
once_cell = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
regex = "1.0"
lazy-regex = "2.0"
lru = "0.12"
bincode = "1.3"
rand = "0.8"
fastrand = "2.0"

# Stage 41.0: Quantum computing
num-complex = "0.4"
url = "2.0"
dirs = "5.0"
wat = "1.0"

# Stage 27.1: Embedded builtins dependencies
md5 = "0.8"

# Stage 27.3/28: Additional dependencies
async-trait = "0.1"
rayon = "1.10"
filetime = "0.2"

# Stage 30.5: Observability dependencies
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-prometheus = "0.14"
opentelemetry-jaeger = "0.20"
opentelemetry-http = "0.10"
tracing-appender = "0.2"
tracing-opentelemetry = "0.22"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_yaml = "0.9"

# Stage 43.0: Node.js API dependencies
hex = "0.4"
base64 = "0.22"
percent-encoding = "2.1"
urlencoding = "2.1"

# Stage 54.2: ONNX Runtime dependencies
# onnxruntime = "0.0.14"  # 暂时禁用，需要系统 ONNX Runtime 库
# candle-core = "0.7"      # 暂时禁用，版本冲突
# candle-nn = "0.7"        # 暂时禁用，版本冲突

# Stage 54.3: PyTorch TorchScript dependencies
tch = { version = "0.11", optional = true }  # 可选依赖，支持条件编译

# Stage 88: Multi-language support
pyo3 = { version = "0.24", features = ["auto-initialize"] }  # Python integration
# go-vm = "0.5"  # Go VM integration (placeholder, not published yet)

# Stage 89: V8 API 兼容性修复 - 启用前向兼容性
pyo3-build-config = { version = "0.24", features = ["resolve-config"] }  # 支持前向兼容构建

# Stage 91 Phase 4.2: Enhanced REPL dependencies
rustyline = "14.0"  # Enhanced readline with tab completion and history
syntect = "5.0"     # Syntax highlighting for code display
colored = "2.0"     # Terminal colors and formatting

# Stage 83: Enterprise Kubernetes & DevOps dependencies
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", default-features = false, features = ["schemars", "v1_28"] }
kube-runtime = "0.87"
schemars = { version = "0.8", features = ["derive"] }
elasticsearch = { version = "9.1.0-alpha.1", default-features = false }
git2 = "0.18"

# Stage 84: Security & Compliance dependencies
rust-crypto = "0.2"
ring = "0.17"
jsonwebtoken = "9.0"
oauth2 = "1.0"
openssl = "0.10"
sled = "0.34"
getrandom = { version = "0.2", features = ["js"] }

# Testing
[dev-dependencies]
tempfile = "3.0"
futures = "0.3"

# Async runtime
futures-util = "0.3"

# Serial test support for V8 thread-safe testing
serial_test = "3.0"

[[bin]]
name = "beejs-benchmark"
path = "tools/benchmark_runner.rs"

[[bin]]
name = "beejs"
path = "src/main.rs"

[[bin]]
name = "test_stage95_core"
path = "test_stage95_core.rs"

[[bin]]
name = "test_stage95_phase2_prediction"
path = "test_stage95_phase2_prediction.rs"

[[bin]]
name = "test_stage95_phase3_optimization"
path = "test_stage95_phase3_optimization.rs"

[[bin]]
name = "test_stage95_phase5_integration"
path = "test_stage95_phase5_integration.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
