[package]
name = "beejs"
version = "0.1.0"
edition = "2021"
autobins = false
authors = ["Henry Zhang"]
description = "JavaScript/TypeScript runtime built with Rust and V8"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zh30/beejs"
homepage = "https://github.com/zh30/beejs"
documentation = "https://docs.rs/beejs"
keywords = ["javascript", "typescript", "runtime", "v8"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/src/lib.rs",
    "/src/main.rs",
    "/src/event_loop.rs",
    "/src/runtime_minimal.rs",
    "/src/package_manager.rs",
    "/src/watcher.rs",
    "/src/watcher_websocket.rs",
    "/src/ecosystem_lite.rs",
    "/src/performance_analyzer.rs",
    "/src/performance_comparison.rs",
    "/src/performance_regression.rs",
    "/src/performance_reporter.rs",
    "/src/ai/*.rs",
    "/src/ai_inference/*.rs",
    "/src/aiops/**/*.rs",
    "/src/benchmarks/*.rs",
    "/src/cloud_native/**/*.rs",
    "/src/error/*.rs",
    "/src/fallback/*.rs",
    "/src/memory/*.rs",
    "/src/monitor/**/*.rs",
    "/src/multilang/*.rs",
    "/src/nodejs_core/*.rs",
    "/src/observability/**/*.rs",
    "/src/platform/*.rs",
    "/src/security/*.rs",
    "/src/testing/**/*.rs",
    "/src/typescript/*.rs",
    "/src/v8_snapshot/*.rs",
    "/src/web_api/*.rs",
    "/tests/*.rs",
    "/tests/integration/*.rs",
    "/examples/basics/*.js",
    "/examples/basics/*.ts",
    "/examples/testing/*.js",
    "/docs/CLI_USAGE_GUIDE.md",
    "/docs/QUICK_START.md",
]

[dependencies]
# V8 - Google's high-performance JavaScript engine with Rust bindings
rusty_v8 = "0.22"

# WebAssembly runtime
wasmtime = "38.0"
wasmtime-wasi = "38.0"

# JavaScript to WebAssembly compiler
javy-codegen = "1.0"

# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# WebAssembly binary format
wasm-encoder = "0.243"
wasmparser = "0.217"

# Cryptography for module hashing
blake3 = "1.5"

# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
memmap2 = "0.9"

# HTTP Server for Server mode
tiny_http = "0.12"

# System calls for zero-copy network I/O
libc = "0.2"
nix = { version = "0.29", features = ["uio", "socket"] }
windows-sys = { version = "0.52", features = ["Win32_System_Diagnostics_Debug"] }

# Temporary file support
tempfile = "3.0"

# Tarball extraction for npm packages
flate2 = "1.0"
tar = "0.4"

# WebSocket support (with TLS)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Async utilities
futures = "0.3"
futures-util = "0.3"

# File watching for hot reload
notify = "6.1"
notify-debouncer-mini = "0.4"
walkdir = "2.4"

# Utilities
once_cell = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
regex = "1.0"
lazy-regex = "2.0"
lru = "0.12"
bincode = "1.3"
rand = "0.8"
fastrand = "2.0"

# Stage 41.0: Quantum computing
num-complex = "0.4"
url = "2.0"
dirs = "5.0"
wat = "1.0"

# Stage 27.1: Embedded builtins dependencies
md5 = "0.8"
sha1 = "0.10"

# Stage 27.3/28: Additional dependencies
async-trait = "0.1"
rayon = "1.10"
filetime = "0.2"

# Stage 30.5: Observability dependencies
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }
opentelemetry-jaeger = { version = "0.20", optional = true }
opentelemetry-http = { version = "0.10", optional = true }
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.22", optional = true }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_yaml = "0.9"

# Stage 43.0: Node.js API dependencies
hex = "0.4"
base64 = "0.22"
percent-encoding = "2.1"
urlencoding = "2.1"
sys-info = "0.9"

# TextEncoder/TextDecoder encoding support
encoding_rs = "0.8"

# Stage 54.2: ONNX Runtime dependencies
# onnxruntime = "0.0.14"  # 暂时禁用，需要系统 ONNX Runtime 库
# candle-core = "0.7"      # 暂时禁用，版本冲突
# candle-nn = "0.7"        # 暂时禁用，版本冲突

# Stage 54.3: PyTorch TorchScript dependencies
tch = { version = "0.11", optional = true }  # 可选依赖，支持条件编译

# Stage 88: Multi-language support
pyo3 = { version = "0.24", features = ["auto-initialize"], optional = true }  # Python integration
# go-vm = "0.5"  # Go VM integration (placeholder, not published yet)

# Stage 89: V8 API 兼容性修复 - 启用前向兼容性
pyo3-build-config = { version = "0.24", features = ["resolve-config"], optional = true }  # 支持前向兼容构建

# Stage 91 Phase 4.2: Enhanced REPL dependencies
rustyline = "14.0"  # Enhanced readline with tab completion and history
syntect = "5.0"     # Syntax highlighting for code display
colored = "2.0"     # Terminal colors and formatting

# Stage 83: Enterprise Kubernetes & DevOps dependencies
kube = { version = "0.87", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.20", default-features = false, features = ["schemars", "v1_28"], optional = true }
kube-runtime = { version = "0.87", optional = true }
schemars = { version = "0.8", features = ["derive"], optional = true }
elasticsearch = { version = "9.1.0-alpha.1", default-features = false, optional = true }
git2 = { version = "0.18", optional = true }

# Stage 84: Security & Compliance dependencies
rust-crypto = "0.2"
sha2 = "0.10"  # v0.3.354: SHA-256/384/512 for crypto.subtle.digest
ring = "0.17"
untrusted = "0.9"  # For ring ECDSA verification
jsonwebtoken = "9.0"
oauth2 = "1.0"
openssl = "0.10"
sled = "0.34"
getrandom = { version = "0.2", features = ["js"] }

# v0.3.98: HTTPS/TLS support using rustls for better performance
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "2.0"
tokio-rustls = "0.24"

# Testing
[dev-dependencies]
tempfile = "3.0"
futures = "0.3"

# Async runtime
futures-util = "0.3"

# Serial test support for V8 thread-safe testing
serial_test = "3.0"

# [[bin]]
# name = "beejs-benchmark"
# path = "tools/benchmark_runner.rs"

[[bin]]
name = "bee"
path = "src/main.rs"

# [[bin]]
# name = "test_stage95_core"
# path = "test_stage95_core.rs"

# [[bin]]
# name = "test_stage95_phase2_prediction"
# path = "test_stage95_phase2_prediction.rs"

# [[bin]]
# name = "test_stage95_phase3_optimization"
# path = "test_stage95_phase3_optimization.rs"

# [[bin]]
# name = "test_stage95_phase5_integration"
# path = "test_stage95_phase5_integration.rs"

[features]
default = []
verbose_logging = []  # Enable verbose logging for debugging
tch = ["dep:tch"]     # Enable PyTorch/Tch support for ML workloads
multilang = ["dep:pyo3", "dep:pyo3-build-config"]
cloudnative = ["dep:kube", "dep:kube-runtime", "dep:k8s-openapi"]
enterprise = ["dep:elasticsearch", "dep:git2", "dep:schemars"]
observability = ["dep:prometheus", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-prometheus", "dep:opentelemetry-jaeger", "dep:opentelemetry-http", "dep:tracing-opentelemetry"]
ai = []
benchmarks = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
